--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 Topics
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Web Development</a></li>
+                <li><a class="dropdown-item" href="#">Web </a></li>
                 <li><a class="dropdown-item" href="#">Technologies</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
